# ppt-remix-master

./: .env.example  .gitignore  README.md  README.zh-CN.md  config.yaml.example
cli/: pyproject.toml  run_cli.py
cli/ppt_remix/: cli.py  config.py  image_quality.py  image_utils.py  json_io.py  pptx_ops.py  providers.py  server.py  workflow.py
examples/: demo.pptx
n8n/: env.example  ppt-remix-self-hosted.workflow.json
skill/: SKILL.md
tests/: create_minimal_pptx.py  test_config_and_image_utils.py  test_transparency_prompt_rules.py  test_transparent_image_handling.py
