[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-remix-master"
version = "0.1.0"
description = "Local PPTX remix CLI for AI-assisted image and text replacement."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.0",
  "Pillow>=10.0.0",
]

[project.scripts]
ppt-remix = "ppt_remix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppt_remix*"]
